--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <body>
     r mvevi dzmgvw gl wl gsrh...<br>
     szuhgvrmhhlm...<br><br>
-    <a href="/never/aa/bb/cc/dd/ee/ff/gg/hh/ii/jj/kk/ll/mm/nn/oo/pp/qq/rr/ss/tt/uu/vv/ww/xx/yy/zz"
+    <a href="/never/aa/bb/cc/dd/ee/ff/gg/hh/ii/jj/kk/ll/mm/nn/oo/pp/qq/rr/ss/tt/uu/vv/ww/xx/yy/zz">good luck</a>
   </body>
 </html>
